add examples for line remover & shadow remover mkdocs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ theme:
 nav:
   - Get Started: main.md
   - Document Ingelligence: index.md
+  - Document Optical Character Recognition (OCR): document_ocr.md 
   - Document Pre-processing Methods: document_pre-processing_methods.md
   - Document Question Answering: document_question_answering.md
   - Table Extraction Method: table_extraction.md
